--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,18 +1,24 @@
-h2{
-    color: rgb(0,0,255);
-    text-align: center;
-    border: solid;
-    width: 10
-    
-    0%;
-}
+h1{
+    display:inline;
+    background-color: rgb(200, 150, 50, 0.9);
 
+}
+/* span{
+    /* display:block; */
+    /* background-color: navajowhite;
+    border:solid black;
+    height:100px;
+    width:20px;
+    padding:50px;
+} */ 
 button{
-    background-color: blue;
-    }
-p{
-    color:white;
-    background-color: #000000;
-    font-size : 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: hotpink;
+    opacity: 0.9;
+}
+div:hover{
+    background-color: teal;
+    border: 2px solid black;
+    transition: 5s;
+    border: 2px solid black;
+    border-radius: 50%;
 }
